--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation for Sites</title>
+    <title>Welcome to Donny!</title>
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
-    <div class="row">
-      <div class="large-12 columns">
-        <h1>Hi there, welcome.</h1>
+    <div class="row hero-text">
+      <div class="large-12 columns text-center">
+        <img src="img/wilson-logo-gray.png" width="30px">
+        <br><br>
+        <p class="subheader">powered by donny</p>
       </div>
     </div>
-
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/what-input/what-input.js"></script>
     <script src="bower_components/foundation-sites/dist/foundation.js"></script>
