--- a/index.html
+++ b/index.html
@@ -6,15 +6,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Donny!</title>
     <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   </head>
   <body>
-    <div class="row hero-text">
-      <div class="large-12 columns text-center">
-        <img src="img/wilson-logo-gray.png" width="30px">
-        <br><br>
-        <p class="subheader">powered by donny</p>
+
+    <div class="row hide-for-small-only">
+      <div class="large-2 columns">
+        <img src="img/wilson-logo-gray.png" class="logo" width="30px">
+      </div>
+      <div class="large-10 columns text-right">
+        <ul class="inline-list">
+          <li><a href="#">Have some fun</a></li>
+          <li><a href="#">Join Me</a></li>
+        </ul>
       </div>
     </div>
+
+    <div class="row">
+      <div class="large-12 columns hero">
+        <p class="subheader uppercase hide-for-small-only">Product</p>
+        <h1 class="uppercase text-center">Designer</h1>
+        <div class="row">
+          <div class="large-6 columns">
+            <div class="display-text-left"><h5>Title goes here</h5><br>Curabitur blandit mollis lacus. Phasellus volutpat, metus eget egestas mollis, lacus lacus blandit dui, id egestas quam mauris ut lacus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nunc nulla. In auctor lobortis lacus.
+            </div>
+          </div>
+          <div class="large-6 columns">
+            <div class="display-text-right">Curabitur blandit mollis lacus. Phasellus volutpat, metus eget egestas mollis, lacus lacus blandit dui, id egestas quam mauris ut lacus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nunc nulla. In auctor lobortis lacus.
+
+            <ul class="inline-list text-left">
+              <li><a href="#"><i class="fa fa-github-square fa-2x"></i></a></li>
+              <li><a href="#"><i class="fa fa-dribbble fa-2x"></i></a></li>
+              <li><a href="#"><i class="fa fa-twitter-square fa-2x"></i></a></li>
+            </ul>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="large-12 columns text-center">
+        <div class="callout" data-closable="slide-out-right">
+          <button class="close-button" data-close>&times;</button>
+          <p>Looking for an amazing designer?</p>
+          <a class="button">I got you</a>
+        </div>
+      </div>
+    </div>
+
+    <footer class="footer">
+      <div class="row hero-text">
+        <div class="large-12 columns">
+          <p class="links">
+            <a href="#"><i class="fa fa-send"></i> contact me</a>
+            <a href="#"><i class="fa fa-space-shuttle"></i> who I am</a>
+            <a href="#"><i class="fa fa-sign-in"></i> let's work</a>
+          </p>
+          <br>
+          <p class="subheader"><i class="fa fa-spinner fa-pulse"></i>   powered by donny</p>
+        </div>
+      </div>
+    </footer>
+
+    <img src="img/hero-bg-profile.jpg" class="bg">
+
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/what-input/what-input.js"></script>
     <script src="bower_components/foundation-sites/dist/foundation.js"></script>
