--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
     </div>
 
-    <footer class="footer">
+    <footer class="footer hide-for-small-only">
       <div class="row hero-text">
         <div class="large-12 columns">
           <p class="links">
@@ -70,7 +70,7 @@
       </div>
     </footer>
 
-    <img src="img/hero-bg-profile.jpg" class="bg">
+    <img src="img/hero-bg-profile.jpg" class="bg hide-for-small-only">
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/what-input/what-input.js"></script>
