--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <h1 class="uppercase text-center">Designer</h1>
         <div class="row">
           <div class="large-6 columns">
-            <div class="display-text-left"><h5>Hey, My name is Donald</h5><br>My friends call me Donny. I am a designer <em>(product, marketing, ux, you name it!)</em> with a passion for front end <em>(I developed this site - git, sublime, and foundation).</em><br>
-            currently at <strong><a href="#">Appcues</a></strong>, formerly at <strong><a href="#">Impactbnd</a></strong>.
+            <div class="display-text-left"><div class="helper-icon"><i class="fa fa-question-circle"></i></div><br><h5>Hey, My name is Donald</h5><br>My friends call me Donny. I am a designer <em>(product, marketing, ux, you name it!)</em> with a passion for front end <em>(I developed this site - git, sublime, and foundation).</em><br>
+            Currently at <strong><a href="#">Appcues</a></strong>, formerly at <strong><a href="#">Impactbnd</a></strong>.
             </div>
           </div>
           <div class="large-6 columns">
