--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
 
-    <div class="row hide-for-small-only">
+    <div class="row hide-for-small-only top-bar">
       <div class="large-2 columns">
         <img src="img/wilson-logo-gray.png" class="logo" width="30px">
       </div>
