mobile text update

--- a/index.html
+++ b/index.html
@@ -42,11 +42,14 @@
 
     <div class="row">
       <div class="large-12 columns hero">
-        <p class="subheader uppercase hide-for-small-only cd-headline letters type">
+        <p class="subheader uppercase cd-headline letters type hook-head">
             <span class="cd-words-wrapper waiting">
-              <b class="is-visible">product</b>
-              <b>web</b>
-              <b>UX</b>
+              <b class="is-visible">-product-</b>
+              <b>-web-</b>
+              <b>-UX-</b>
+              <b>-UI-</b>
+              <b>-app-</b>
+              <b>-graphic-</b>
             </span>
         </p>
         <h1 class="uppercase text-center">Designer</h1>
@@ -97,7 +100,7 @@
       </div>
     </footer>
 
-    <img src="img/hero-bg-bw-crop.jpg" class="bg hide-for-small-only">
+    <img src="img/hero-bg-profile.jpg" class="bg hide-for-small-only">
     
     <script type="text/javascript">
       // NOTE: Don't use this token, replace it with your own client access token.
