--- a/index.html
+++ b/index.html
@@ -106,19 +106,18 @@
       // NOTE: Don't use this token, replace it with your own client access token.
       $.jribbble.setToken('1220e8337487705bb3bf496f258e5b3a28581b9255f08bbefdca653cf2bfe168');
 
-      $.jribbble.users('donnywilson').shots({per_page: 36}).then(function(shots) {
+      $.jribbble.users('donnywilson').likes({per_page: 28}).then(function(likes) {
         var html = [];
         
-        shots.forEach(function(shot) {
+        likes.forEach(function(like) {
           html.push('<li class="shots--shot">');
-          html.push('<a href="' + shot.html_url + '" target="_blank">');
-          html.push('<img src="' + shot.images.normal + '">');
+          html.push('<a href="' + like.shot.html_url + '" target="_blank">');
+          html.push('<img src="' + like.shot.images.normal + '">');
           html.push('</a></li>');
         });
         
         $('.shots').html(html.join(''));
-      });
-    </script>
+      });    </script>
 
     <script src="bower_components/jribbble/dist/jribbble.min.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
