--- a/index.html
+++ b/index.html
@@ -27,16 +27,18 @@
   </head>
   <body>
 
-    <div class="row hide-for-small-only top-bar">
-      <div class="large-2 columns">
-        <img src="img/wilson-logo-gray.png" class="logo" width="30px">
-      </div>
-      <div class="large-10 columns text-right">
-        <ul class="inline-list">
-          <li><a href="#" type="button" name="myButton" value="Random link"
-            onClick="rand_link()">Have some fun</a></li>
-          <li><a href="#">Join Me</a></li>
-        </ul>
+    <div class="hide-for-small-only top-bar">
+      <div class="row">
+        <div class="large-3 medium-2 columns text-left">
+          <img src="img/wilson-logo-gray.png" class="logo" width="30px">
+        </div>
+        <div class="large-9 medium-6 columns text-right">
+          <ul class="inline-list">
+            <li><a href="#" type="button" name="myButton" value="Random link"
+              onClick="rand_link()">Have some fun</a></li>
+            <li><a href="#">Join Me</a></li>
+          </ul>
+        </div>
       </div>
     </div>
 
@@ -106,7 +108,7 @@
       // NOTE: Don't use this token, replace it with your own client access token.
       $.jribbble.setToken('1220e8337487705bb3bf496f258e5b3a28581b9255f08bbefdca653cf2bfe168');
 
-      $.jribbble.users('donnywilson').likes({per_page: 28}).then(function(likes) {
+      $.jribbble.users('donnywilson').likes({per_page: 4}).then(function(likes) {
         var html = [];
         
         likes.forEach(function(like) {
