--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <div class="large-9 medium-6 columns text-right">
           <ul class="inline-list">
-            <li><a href="#" type="button" name="myButton" value="Random link"
+            <li><a href="" type="button" name="myButton" value="Random link"
               onClick="rand_link()">Have some fun</a></li>
             <li><a href="#">Join Me</a></li>
           </ul>
