dynamic footer copyright date

--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
           </p>
           <br>
           <p class="subheader"><i class="fa fa-spinner fa-pulse"></i>   powered by donny</p>
+          &copy; 2015<script>new Date().getFullYear()>2010&&document.write("-"+new Date().getFullYear());</script>
+
         </div>
       </div>
     </footer>
