stuff and favicon

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Donny!</title>
+    <title>Hey there!</title>
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
     <script src="js/modernizr.js"></script> <!-- Modernizr -->
-    <link rel="icon" type="image/png" href="http://example.com/myicon.png">
+    <link rel="icon" type="image/png" href="img/favicon.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script language="JavaScript">
 
@@ -59,7 +59,7 @@
         <div class="row">
           <div class="large-6 columns">
             <div class="display-text-left"><div class="helper-icon"><i class="fa fa-question-circle"></i></div><br><h5>Hey, My name is Donald</h5><br>My friends call me Donny. I am a designer <em>(product, marketing, ux, you name it!)</em> with a passion for front end <em>(I developed this site - git, sublime, codekit, and foundation).</em><br>
-            Currently at <strong><a href="#">Appcues</a></strong>, formerly at <strong><a href="#">Impactbnd</a></strong>.
+            Currently at <strong><a href="http://www.appcues.com">Appcues</a></strong>, formerly at <strong><a href="http://www.impactbnd.com">Impactbnd</a></strong>.
             </div>
           </div>
           <div class="large-6 columns">
