--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
         });
         
         $('.shots').html(html.join(''));
-      });    </script>
+      });    
+    </script>
 
     <script src="bower_components/jribbble/dist/jribbble.min.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
