--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
       </div>
     </div>
 
-    <div class="row">
-      <div class="large-12 columns">
-        <ul class="shots"></ul>
-      </div>
+    <div class="container">
+        <h5>My Dribbble Shots</h5>
+        <div class="row center dribbble-shots">
+        </div>
     </div>
 
     <footer class="footer hide-for-small-only">
@@ -111,21 +111,20 @@
 
     <img src="img/hero-bg-profile.jpg" class="bg hide-for-small-only">
 
-    <script language="JavaScript">
-      $.jribbble.setToken('1220e8337487705bb3bf496f258e5b3a28581b9255f08bbefdca653cf2bfe168');
-
-      $.jribbble.users('donnywilson').shots({per_page: 16}).then(function(shots) {
-        var html = [];
-        
-        shots.forEach(function(shot) {
-          html.push('<li class="shots--shot">');
-          html.push('<a href="' + shot.html_url + '" target="_blank">');
-          html.push('<img src="' + shot.images.normal + '">');
-          html.push('</a></li>');
-        });
-        
-        $('.shots').html(html.join(''));
-      });
+    <script>
+      (function(){
+          var playerId = "envato";
+          $.jribbble.getShotsByPlayerId(playerId, function(data){
+              var shots = data.shots;
+              var h = '';
+              $(shots).each(function(i, shot){
+                  h += '<div class="column-6--hand column-4--lap column-3--desk column-2--wall">';
+                  h += '<a href="' + shot.url + '"><img src="' + shot.image_teaser_url + '"></a>';
+                  h += '</div>';
+              });
+              $('.dribbble-shots').html(h);
+          });
+      }());
     </script>
 
     <script src="js/min/jribbble.min.js"></script>
