--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </div>
     </div>
 
-    <ul class="shots"></ul>
+    <div class="shots"></div>
 
     <footer class="footer hide-for-small-only">
       <div class="row hero-text">
