--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           var html = [];
         
           shots.forEach(function(shot) {
-              html.push('<div class="col-sm-6 col-md-4 col-lg-4"> <div class="grid-list">');
+              html.push('<div class="small-6 medium-4 large-4 columns"> <div class="grid-list">');
               html.push('<a href="' + shot.html_url + '" target="_blank">');
               html.push('<img class="img-responsive" src="' + shot.images.normal + '" alt="' + shot.title + '"><\/a>');
               html.push('<div class="overlay"><a target="_blank"  href="' + shot.html_url + '">');
