--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       $(document).ready(function()
           //Paste your Client Access Token in the line below within quotes - you can build your API from https://dribbble.com/account/applications 
           $.jribbble.setToken('1220e8337487705bb3bf496f258e5b3a28581b9255f08bbefdca653cf2bfe168');
-          $.jribbble.users('donnywilson').shots({per_page: 16}).then(function(shots) {
+          $.jribbble.users('focuslabs').shots({per_page: 16}).then(function(shots) {
           var html = [];
         
           shots.forEach(function(shot) {
