--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         shots.forEach(function(shot) {
            html.push(
                   '<li class="tile"><div>'+
-                  '<a class="thumb" href="'+shot.html_url+'" data-lightbox="project" data-title="'+shot.title+'"><figure><i class="fa fa-search-plus"></i></figure>' +
+                  '<a class="thumb" target="_blank" href="'+shot.html_url+'" data-lightbox="project" data-title="'+shot.title+'"><figure><i class="fa fa-search-plus"></i></figure>' +
                   '<img src="'+shot.images.hidpi+'" alt="'+shot.title+'" />' +
                   '</a>' +
                   '</div></li>'
