--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
   </head>
   <body>
 
+  <div class="cta show-for-small-only">
+    <p>Want to work together?<a class="work-button" href="#">Let's do it<i class="fa fa-long-arrow-right icon"></i></a></p>
+  </div>
+
     <div class="hide-for-small-only top-bar">
       <div class="row">
         <div class="large-3 medium-2 columns text-left">
@@ -22,7 +26,7 @@
         </div>
         <div class="large-9 medium-6 columns text-right">
           <ul class="inline-list">
-            <li><a href="#">Join Me</a></li>
+            <li><a href="#" class=""></a></li>
           </ul>
         </div>
       </div>
@@ -112,6 +116,12 @@
         });
         $('.gallery-feed').html(html.join(''));
         console.log(html)
+      });
+    </script>
+
+    <script>
+      $(document).ready(function(){
+          // your code here
       });
     </script>
     
