Updated portfolio grid

--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row portfolio-grid">
+      <div class="title">
+        <h5>The Works</h5>
+        <p><em>For more shots of my work check out my <a href="wwww.dribbble.com/donnywilson">dribbble</a></em></p>
+      </div>
       <div class="large-12 columns">
         <aside class="gallery">
           <ul class="gallery-feed"></ul>
