--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   </head>
   <body>
 
+  <img src="img/wilson-logo-gray.png" class="mobile-logo show-for-small-only">
+
   <div class="cta show-for-small-only">
     <p>Want to work together?<a class="work-button" href="#">Let's do it<i class="fa fa-long-arrow-right icon"></i></a></p>
   </div>
