--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="row portfolio-grid">
       <div class="title">
         <h5>The Works</h5>
-        <p><em>For more shots of my work check out my <a href="https://dribbble.com/donnywilson"><i class="fa fa-dribbble fa-2x"></i></a></em></p>
+        <p><em>For more shots of my work check out my <a targe="_blank" href="https://dribbble.com/donnywilson"><i class="fa fa-dribbble fa-2x"></i></a></em></p>
       </div>
       <div class="large-12 columns">
         <aside class="gallery">
