--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <img src="img/wilson-logo-gray.png" class="mobile-logo show-for-small-only">
 
   <div class="cta show-for-small-only">
-    <p>Want to work together?<a class="work-button" href="#">Let's do it<i class="fa fa-long-arrow-right icon"></i></a></p>
+    <p>Want to work together?<a class="work-button" href="mailto:heydwilson@gmail.com?subject=Let's Work Together!&body=I have a great project.">Let's do it<i class="fa fa-long-arrow-right icon"></i></a></p>
   </div>
 
     <div class="hide-for-small-only top-bar">
@@ -27,8 +27,8 @@
           <img src="img/wilson-logo-gray.png" class="logo" width="30px">
         </div>
         <div class="large-9 medium-6 columns text-right">
-          <ul class="inline-list">
-            <li><a href="#" class=""></a></li>
+          <ul class="menu-items">
+            <li><a class="signup" href="mailto:heydwilson@gmail.com?subject=Let's Work Together!&body=I have a great project.">Let's work on something</a></li>
           </ul>
         </div>
       </div>
@@ -57,23 +57,13 @@
             <div class="display-text-right">Curabitur blandit mollis lacus. Phasellus volutpat, metus eget egestas mollis, lacus lacus blandit dui, id egestas quam mauris ut lacus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nunc nulla. In auctor lobortis lacus.
 
             <ul class="inline-list text-left">
-              <li><a href="#"><i class="fa fa-github-square fa-2x"></i></a></li>
-              <li><a href="#"><i class="fa fa-dribbble fa-2x"></i></a></li>
-              <li><a href="#"><i class="fa fa-twitter-square fa-2x"></i></a></li>
+              <li><a target="_blank" href="https://github.com/onenewera"><i class="fa fa-github-square fa-2x"></i></a></li>
+              <li><a target="_blank" href="https://dribbble.com/donnywilson"><i class="fa fa-dribbble fa-2x"></i></a></li>
+              <li><a target="_blank" href="https://twitter.com/DonnyWilson"><i class="fa fa-twitter-square fa-2x"></i></a></li>
             </ul>
 
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="large-12 columns text-center">
-        <div class="callout" data-closable="fade-out">
-          <button class="close-button" data-close>&times;</button>
-          <p>Looking for an amazing designer?</p>
-          <a class="button">I got you</a>
         </div>
       </div>
     </div>
