--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             <div class="display-text-right">Curabitur blandit mollis lacus. Phasellus volutpat, metus eget egestas mollis, lacus lacus blandit dui, id egestas quam mauris ut lacus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nunc nulla. In auctor lobortis lacus.
 
             <ul class="inline-list text-left">
-              <li><a target="_blank" href="https://github.com/onenewera"><i class="fa fa-github-square fa-2x"></i></a></li>
-              <li><a target="_blank" href="https://dribbble.com/donnywilson"><i class="fa fa-dribbble fa-2x"></i></a></li>
-              <li><a target="_blank" href="https://twitter.com/DonnyWilson"><i class="fa fa-twitter-square fa-2x"></i></a></li>
+              <li><a target="_blank" href="https://github.com/onenewera"><i class="fa fa-github-square"></i></a></li>
+              <li><a target="_blank" href="https://dribbble.com/donnywilson"><i class="fa fa-dribbble"></i></a></li>
+              <li><a target="_blank" href="https://twitter.com/DonnyWilson"><i class="fa fa-twitter-square"></i></a></li>
             </ul>
 
             </div>
@@ -84,9 +84,9 @@
       <div class="row hero-text">
         <div class="large-12 columns">
           <p class="links">
-            <a href="#"><i class="fa fa-send"></i> contact me</a>
-            <a href="#"><i class="fa fa-space-shuttle"></i> who I am</a>
-            <a href="#"><i class="fa fa-sign-in"></i> let's work</a>
+            <a href="mailto:heydwilson@gmail.com?subject=Let's Work Together!&body=I have a great project."><i class="fa fa-send"></i> contact me</a>
+            <a href="mailto:heydwilson@gmail.com?subject=Let's Work Together!&body=I have a great project."><i class="fa fa-space-shuttle"></i> who I am</a>
+            <a href="mailto:heydwilson@gmail.com?subject=Let's Work Together!&body=I have a great project."><i class="fa fa-sign-in"></i> let's work</a>
           </p>
           <br>
           <p class="subheader"><i class="fa fa-spinner fa-pulse"></i>   powered by donny</p>
