Added some copy

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
           </div>
           <div class="large-6 columns">
-            <div class="display-text-right">Curabitur blandit mollis lacus. Phasellus volutpat, metus eget egestas mollis, lacus lacus blandit dui, id egestas quam mauris ut lacus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nunc nulla. In auctor lobortis lacus.
+            <div class="display-text-right">I am always looking and available for new side projects. Let me know what you have in mind and we can go from there. Until then check out some of my links below and be sure to show some love on dribbble!<br>
 
             <ul class="inline-list text-left">
               <li><a target="_blank" href="https://github.com/onenewera"><i class="fa fa-github-square"></i></a></li>
