--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h1 class="uppercase text-center">Designer</h1>
         <div class="row">
           <div class="large-6 columns">
-            <div class="display-text-left"><div class="helper-icon"><i class="fa fa-question-circle"></i></div><br><h5>Hey, My name is Donald</h5><br>My friends call me Donny. I am a designer <em>(product, marketing, ux, you name it!)</em> with a passion for front end <em>(I developed this site - git, sublime, codekit, and foundation).</em><br>
+            <div class="display-text-left"><div class="helper-icon"><i class="fa fa-question-circle"></i></div><br><h5>Hey, My name is Donald</h5><br>My friends call me Donny. I am a designer <em>(product, marketing, ux, you name it!)</em> with a passion for front end <em>(I developed this site - git, sublime, codekit, and foundation).</em><br><br>
             Currently at <strong><a href="http://www.appcues.com">Appcues</a></strong>, formerly at <strong><a href="http://www.impactbnd.com">Impactbnd</a></strong>.
             </div>
           </div>
@@ -127,6 +127,5 @@
     <script src="bower_components/what-input/what-input.js"></script>
     <script src="bower_components/foundation-sites/dist/foundation.js"></script>
     <script src="js/min/app-min.js"></script>
-    <script src="js/main.js"></script> <!-- Resource jQuery -->
   </body>
 </html>
