--- a/index.html
+++ b/index.html
@@ -127,5 +127,6 @@
     <script src="bower_components/what-input/what-input.js"></script>
     <script src="bower_components/foundation-sites/dist/foundation.js"></script>
     <script src="js/min/app-min.js"></script>
+    <script src="js/main.js"></script> <!-- Resource jQuery -->
   </body>
 </html>
