--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/jribbble.min.js"></script>
-
+    <link rel="stylesheet" type="text/css" href="//fast.appcues.com/appcues.min.css">
   </head>
   <body>
+  <script src="//fast.appcues.com/16161.js"></script>
 
   <img src="img/wilson-logo-gray.png" class="mobile-logo show-for-small-only">
 
@@ -113,6 +114,10 @@
         $('.gallery-feed').html(html.join(''));
         console.log(html)
       });
+    </script>
+
+    <script type="text/javascript">
+        Appcues.anonymous();
     </script>
 
     <script>
