--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/jribbble.min.js"></script>
     <link rel="stylesheet" type="text/css" href="//fast.appcues.com/appcues.min.css">
+    <!-- Heap Analytics DELETE -->
+    <script type="text/javascript">
+      window.heap=window.heap||[],heap.load=function(e,t){window.heap.appid=e,window.heap.config=t=t||{};var n=t.forceSSL||"https:"===document.location.protocol,a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=(n?"https:":"http:")+"//cdn.heapanalytics.com/js/heap-"+e+".js";var o=document.getElementsByTagName("script")[0];o.parentNode.insertBefore(a,o);for(var r=function(e){return function(){heap.push([e].concat(Array.prototype.slice.call(arguments,0)))}},p=["clearEventProperties","identify","setEventProperties","track","unsetEventProperty"],c=0;c<p.length;c++)heap[p[c]]=r(p[c])};
+      heap.load("3323240088");
+    </script>
   </head>
   <body>
   <script src="//fast.appcues.com/16161.js"></script>
