--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
     webengage.init("aa13252c");
     </script>
+    <script>/* Chameleon - better user onboarding */!function(t,n,o){var a="chmln",c="setup identify alias track set show on off custom help _data".split(" ");n[a]||(n[a]={}),n[a].accountToken=o,n[a].location=n.location.href.toString();for(var e=0;e<c.length;e++)!function(){var t=n[a][c[e]+"_a"]=[];n[a][c[e]]=function(){t.push(arguments)}}();var s=t.createElement("script");s.src="https://fast.trychameleon.com/messo/"+o+"/messo.min.js",s.async=!0,t.head.appendChild(s)}(document,window,"SqAu0sx75HKXuCN0yTemn8zXkB2cpqtn0APBMd7HFG8ugZ-1ATgDp-z3vyVC7hn1CWtGrL");
+    chmln.identify({uid: current_user.id, created: current_user.created_at})</script>
   </head>
   <body>
   <script src="//fast.appcues.com/16161.js"></script>
