--- a/index.html
+++ b/index.html
@@ -11,8 +11,17 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/jribbble.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="//fast.appcues.com/appcues.min.css">
   </head>
   <body>
+    
+  <!-- This is Appcues -->
+  <script src="//fast.appcues.com/16161.js"></script>
+  <script type="text/javascript">
+          Appcues.anonymous();
+      </script>
+
+  <script src="//fast.appcues.com/16161.js"></script>
 
   <img src="img/wilson-logo-gray.png" class="mobile-logo show-for-small-only">
 
