--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <img src="img/wilson-logo-gray.png" class="mobile-logo show-for-small-only">
 
-  <div class="cta show-for-small-only wow fadeIn">
+  <div class="cta show-for-small-only wow slideInLeft" data-wow-delay="2s">
     <p>Want to work together?<a class="work-button" href="mailto:heydwilson@gmail.com?subject=Let's Work Together!&body=I have a great project.">Let's do it<i class="fa fa-long-arrow-right icon"></i></a></p>
   </div>
 
