--- a/slideouts/index.html
+++ b/slideouts/index.html
@@ -27,7 +27,7 @@
     </script>
   </head>
   <body>
-    <div class="hero">
+    <div class="hero gradient-bg">
       <div class="container">
         <div class="row">
           <div class="twelve columns wow fadeIn"> 
@@ -57,7 +57,7 @@
 
       <div class="row">
           <div class="six columns center wow fadeIn" data-wow-delay=".3s">
-            <img src="images/placeholder-2.png">
+            <img src="images/placeholder-3.png" width="85%">
           </div>
           <div class="six columns wow fadeIn" data-wow-delay=".4s">
             <h2>
@@ -70,9 +70,6 @@
         </div><!-- row -->
 
         <div class="row">
-            <div class="six columns center wow fadeIn" data-wow-delay=".4s">
-              <img src="images/placeholder-2.png">
-            </div>
             <div class="six columns wow fadeIn" data-wow-delay=".4s">
               <h2>
                 Drive demos
@@ -81,6 +78,9 @@
                 emailing trial users rarely earns sales demos. 
                 Demo offers are more appealing when offered inside of your product. We tested this and it created a 1.8x lift in appointments.
               </p>
+            </div>
+            <div class="six columns center wow fadeIn" data-wow-delay=".4s">
+              <img src="images/placeholder.png">
             </div>
           </div><!-- row -->
 
@@ -113,7 +113,7 @@
               </div><!-- row -->
     </div><!-- use cases -->
 
-    <div class="cta center">
+    <div class="cta center gradient-bg">
       <div class="container">
         <div class="row">
           <div class="twelve columns wow fadeIn">
