--- a/practice/test-build/index.html
+++ b/practice/test-build/index.html
@@ -26,8 +26,8 @@
             <li>For investors</li>
             <li>Blog</li>
             <li>faq</li>
-          </ul>
-        </div>
+          </ul><!-- links -->
+        </div><!-- four columns -->
 
         <div class="four columns">
           <button class="inline-button">EN</button>
@@ -41,6 +41,48 @@
         <button class="wow fadeIn" data-wow-delay=".5s">Request invitation</button>
       </div><!-- container -->
     </div><!-- hero -->
+
+    <div class="video-section">
+      <div class="container">
+        <div class="row">
+          <div class="twelve columns">
+            <div class="box wow fadeInUp">
+              <img src="images/video-bg.png">
+            </div>
+          </div><!-- twelve columns -->
+        </div><!-- row -->
+      </div><!-- container -->
+    </div><!-- video section -->
+
+    <div class="time-remaining">
+      <div class="container">
+        <div class="row">
+          <div class="twelve columns wow fadeIn" data-wow-delay=".5s">
+            <h1>Time remaining <br> until sale comes and stuff</h1>
+          </div><!-- twelve columns -->
+        </div><!-- row -->
+
+        <div class="row numbers">
+          <div class="four columns hours wow fadeInUp" data-wow-delay=".5s">
+            <h3>9</h3>
+            <h3>5</h3>
+            <h4>hours</h4>
+          </div>
+
+          <div class="four columns minutes wow fadeInUp" data-wow-delay=".7s">
+            <h3>0</h3>
+            <h3>2</h3>
+            <h4>minutes</h4>
+          </div>
+
+          <div class="four columns seconds wow fadeInUp" data-wow-delay="1s">
+            <h3>3</h3>
+            <h3>6</h3>
+            <h4>seconds</h4>
+          </div>
+        </div><!-- row -->
+      </div><!-- container -->
+    </div><!-- time remaining section -->
 
     <div class="footer">
       <div class="social"><a href="#">&#62220;</a></div><!-- facebook -->
