--- a/iamdonny-update/index.html
+++ b/iamdonny-update/index.html
@@ -7,7 +7,9 @@
     <title>I am donny</title>
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/vendor/animate.css">
+    <link rel="stylesheet" href="css/vendor/normalize.css">
     <script src="js/vendor/wow.min.js"></script>
+    <script src="https://use.fontawesome.com/0fce6e15d4.js"></script>
     <script>
     new WOW().init();
     </script>
@@ -39,7 +41,11 @@
           </div><!-- Left -->
 
           <div class="cta wow slideInRight" data-wow-delay="1s" data-wow-duration="1.5s">
-            <h4>Lets work on something</h4>
+            <div class="social">
+              <i class="fa fa-camera-retro fa-2x"></i>
+              <i class="fa fa-camera-retro fa-2x"></i>
+              <i class="fa fa-camera-retro fa-2x"></i>
+            </div>
           </div><!-- CTA -->
 
           <img src="assets/images/callouts.jpg" width="500px" class="illustration wow fadeIn" data-wow-delay="1s">
