stuff and stuff

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
   <body id="animate-area">
 
+
     <img src="images/updatedstates.gif" width=" 700px" class="hero-image wow fadeInLeft" data-wow-delay="1s">
 
     <div class="app">
@@ -36,10 +37,11 @@
           <div class="eight columns left wow slideInLeft">
             <div class="content wow slideInLeft" data-wow-delay=".1s">
               <div class="pulse-animation"></div>
-              <h5>Category</h5>
-              <h1>Be Friendly</h1>
-              <h4>Test how well your site is doing with multi-variant testing</h4>
-              <button>View the post</button>
+              <h5>Web design <span style="opacity: .5;">////////////////</span></h5>
+              <h1>homepage redesign?</h1>
+              <h4>Just why we decided to update the Appcues marketing site</h4>
+              <img class="author hide-for-small-only" src="images/author.png">
+              <a href="https://medium.com/@donnywilson/the-new-appcues-marketing-site-987326f8709e#.m19pox7rl" target="_blank"><button><i class="fa fa-bookmark-o fa-fw" aria-hidden="true"></i></a>View the post</button></a>
             </div>
           </div><!-- Left -->
 
