--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <h1>homepage redesign?</h1>
               <h4>Just why we decided to update the Appcues marketing site</h4>
               <img class="author hide-for-small-only" src="images/author.png">
-              <a href="https://medium.com/@donnywilson/the-new-appcues-marketing-site-987326f8709e#.m19pox7rl" target="_blank"><button><i class="fa fa-bookmark-o fa-fw" aria-hidden="true"></i></a>View the post</button></a>
+              <a href="https://medium.com/@donnywilson/the-new-appcues-marketing-site-987326f8709e#.m19pox7rl" target="_blank"><button><i class="fa fa-bookmark-o fa-fw" aria-hidden="true"></i>View the post</button></a>
             </div>
           </div><!-- Left -->
 
