--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <script src="js/min/wow.min.js"></script>
     <script src="https://use.fontawesome.com/0fce6e15d4.js"></script>
-    
+
     <!-- Hotjar Tracking Code for http://iamdonny.com -->
     <script>
         (function(h,o,t,j,a,r){
@@ -26,10 +26,12 @@
     new WOW().init();
     </script>
   </head>
-  <body id="animate-area">
+  <body>
 
+    <!-- <img src="images/updatedstates.gif" width=" 700px" id="animate-area" lass="hero-image wow fadeInLeft" data-wow-delay="1s"> -->
 
-    <img src="images/updatedstates.gif" width=" 700px" class="hero-image wow fadeInLeft" data-wow-delay="1s">
+    <div class="hero-image wow fadeInLeft" id="animate-area"> 
+    </div>
 
     <div class="app">
       <div class="nav">
