--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div class="eight columns left wow slideInLeft">
             <div class="content wow slideInLeft" data-wow-delay=".1s">
               <div class="pulse-animation"></div>
-              <h5>Web design <span style="opacity: .5;">////////////////</span></h5>
+              <h5>From the blog <span style="opacity: .5;">////////////////</span></h5>
               <h1>homepage redesign?</h1>
               <h4>Just why we decided to update the Appcues marketing site</h4>
               <img class="author hide-for-small-only" src="images/author.png">
