--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
           
           <div class="panel-ctas">
             <div class="panel">
+              <h5 class="wow fadeIn" data-wow-delay="2.3s">Hey, look at this.....</h5>
               <a href="images/Donald-wilson-resume-8-16.pdf" target="_blank"><div class="resume wow fadeInUp" data-wow-delay="1.6s">
                 <div class="four columns icon">
                   <img src="images/resume-icon.svg" width="45px">
