--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="eight columns content">
                   <h1>Check out my resume.</h1>
                   <p>All the goods</p>
-                  <button>Download now</button>
+                  <button>Download it</button>
                 </div>
               </div></a><!-- resume -->
 
@@ -91,7 +91,7 @@
                 <div class="eight columns content">
                   <h1>The stuff I made.</h1>
                   <p>Some examples of my work</p>
-                  <button>View for a bit</button>
+                  <button>Click n' point your face</button>
                 </div>
               </div></a><!-- Portfolio -->
             </div><!-- panel -->
