--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </div>
 
                 <div class="eight columns content">
-                  <h1>The stuff I made.</h1>
+                  <h1>The stuff I've made.</h1>
                   <p>Some examples of my work</p>
                   <button>Click n' point your face</button>
                 </div>
