--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>I am donny</title>
+    <title>Hey, I'm Donny</title>
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/animate.css">
     <script src="js/min/wow.min.js"></script>
