--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/animate.css">
     <script src="js/min/wow.min.js"></script>
+    <script src="js/app.js"></script>
     <script src="https://use.fontawesome.com/0fce6e15d4.js"></script>
 
     <!-- Hotjar Tracking Code for http://iamdonny.com -->
@@ -50,14 +51,26 @@
 
       <div class="hero">
           <div class="eight columns left wow slideInLeft">
-            <div class="content wow slideInLeft" data-wow-delay=".1s">
+            <!-- <div class="content wow slideInLeft" data-wow-delay=".1s">
               <div class="pulse-animation"></div>
               <h5>From the blog <span style="opacity: .5;">////////////////</span></h5>
               <h1>homepage redesign?</h1>
               <h4>Just why we decided to update the Appcues marketing site</h4>
-              <img class="author hide-for-small-only" src="images/author.png">
               <a href="https://medium.com/@donnywilson/the-new-appcues-marketing-site-987326f8709e#.m19pox7rl" target="_blank"><button><i class="fa fa-bookmark-o fa-fw" aria-hidden="true"></i>View the post</button></a>
-            </div>
+            </div> -->
+            <h5>My name is Donny <span style="opacity: .5;">////////////////</span></h5>
+            <h1>I'm a 
+              <span
+                 class="txt-rotate"
+                 data-period="2000"
+                 data-rotate='[ "Designer", "Developer" ]'></span>
+            </h1>
+
+            <h4>Have a project, idea, or question?<br> Let's talk about it</h4>
+
+            <a href="mailto:heydwilson@gmail.com?subject=Got an idea
+            &body=Hey guy, here's an idea..."><button><i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i>Chatting things</button></a>
+
           </div><!-- Left -->
 
           <div class="cta wow slideInUp" data-wow-delay="1s">
