--- a/index.html
+++ b/index.html
@@ -58,28 +58,30 @@
               <h4>Just why we decided to update the Appcues marketing site</h4>
               <a href="https://medium.com/@donnywilson/the-new-appcues-marketing-site-987326f8709e#.m19pox7rl" target="_blank"><button><i class="fa fa-bookmark-o fa-fw" aria-hidden="true"></i>View the post</button></a>
             </div> -->
-            <h5>My name is Donny <span style="opacity: .5;">////////////////</span></h5>
-            <h1>I'm a 
-              <span
-                 class="txt-rotate"
-                 data-period="2000"
-                 data-rotate='[ "Designer", "Developer" ]'></span>
-            </h1>
+            <div class="content">
+              <h5>My name is Donny <span style="opacity: .5;">////////////////</span></h5>
+              <h1>I'm a 
+                <span
+                   class="txt-rotate"
+                   data-period="2000"
+                   data-rotate='[ "Designer", "Developer" ]'></span>
+              </h1>
 
-            <h4>Have a project, idea, or question?<br> Let's talk about it</h4>
+              <h4>Have a project, idea, or question?<br> Let's talk about it</h4>
 
-            <a href="mailto:heydwilson@gmail.com?subject=Got an idea
-            &body=Hey guy, here's an idea..."><button><i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i>Chatting things</button></a>
+              <a href="mailto:heydwilson@gmail.com?subject=Got an idea
+              &body=Hey guy, here's an idea..."><button><i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i>Chatting things</button></a>
+          </div><!-- Content -->
+
+            <div class="cta wow slideInUp" data-wow-delay="1s">
+              <div class="social">
+                <a href="https://dribbble.com/donnywilson" target="_blank"><i class="fa fa-dribbble fa-2x"></i></a>
+                <a href="https://twitter.com/DonnyWilson"><i class="fa fa-twitter fa-2x" target="_blank"></i></a>
+                <a href="https://github.com/onenewera"><i class="fa fa-github fa-2x" target="_blank"></i></a>
+              </div>
+            </div><!-- CTA -->
 
           </div><!-- Left -->
-
-          <div class="cta wow slideInUp" data-wow-delay="1s">
-            <div class="social">
-              <a href="https://dribbble.com/donnywilson" target="_blank"><i class="fa fa-dribbble fa-2x"></i></a>
-              <a href="https://twitter.com/DonnyWilson"><i class="fa fa-twitter fa-2x" target="_blank"></i></a>
-              <a href="https://github.com/onenewera"><i class="fa fa-github fa-2x" target="_blank"></i></a>
-            </div>
-          </div><!-- CTA -->
           
           <div class="panel-ctas">
             <div class="panel">
