--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="js/min/wow.min.js"></script>
     <script src="js/app.js"></script>
     <script src="https://use.fontawesome.com/0fce6e15d4.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
 
     <!-- Hotjar Tracking Code for http://iamdonny.com -->
     <script>
