--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="js/min/wow.min.js"></script>
     <script src="js/app.js"></script>
     <script src="https://use.fontawesome.com/0fce6e15d4.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
 
     <!-- Hotjar Tracking Code for http://iamdonny.com -->
     <script>
@@ -61,11 +61,11 @@
             </div> -->
             <div class="content">
               <h5>My name is Donny <span style="opacity: .5;">////////////////</span></h5>
-              <h1>I'm a 
+              <h1>I'm 
                 <span
                    class="txt-rotate"
                    data-period="2000"
-                   data-rotate='[ "Designer", "Developer" ]'></span>
+                   data-rotate='[ "a Product Designer", "an Illustrator", "a Developer" ]'></span>
               </h1>
 
               <h4>Have a project, idea, or question?<br> Let's talk about it</h4>
