--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
     </script>
   </head>
   <body>
-
     <!-- <img src="images/updatedstates.gif" width=" 700px" id="animate-area" lass="hero-image wow fadeInLeft" data-wow-delay="1s"> -->
 
     <div class="hero-image wow fadeInLeft" id="animate-area"> 
@@ -59,20 +58,22 @@
               <h4>Just why we decided to update the Appcues marketing site</h4>
               <a href="https://medium.com/@donnywilson/the-new-appcues-marketing-site-987326f8709e#.m19pox7rl" target="_blank"><button><i class="fa fa-bookmark-o fa-fw" aria-hidden="true"></i>View the post</button></a>
             </div> -->
-            <div class="content">
-              <h5>My name is Donny <span style="opacity: .5;">////////////////</span></h5>
-              <h1>I'm 
-                <span
-                   class="txt-rotate"
-                   data-period="2000"
-                   data-rotate='[ "a Product Designer", "an Illustrator", "a Developer" ]'></span>
-              </h1>
+            <div class="left-bar">
+              <div class="content">
+                  <h5>My name is Donny <span style="opacity: .5; letter-spacing: -.1rem";>////////////////</span></h5>
+                  <h1>I'm 
+                    <span
+                       class="txt-rotate"
+                       data-period="2000"
+                       data-rotate='[ "a Product Designer", "an Illustrator", "a Developer" ]'></span>
+                  </h1>
 
-              <h4>Have a project, idea, or question?<br> Let's talk about it</h4>
+                  <h4>Have a project, idea, or question?<br> Let's talk about it</h4>
 
-              <a href="mailto:heydwilson@gmail.com?subject=Got an idea
-              &body=Hey guy, here's an idea..."><button><i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i>Chatting things</button></a>
-          </div><!-- Content -->
+                  <a href="mailto:heydwilson@gmail.com?subject=Got an idea
+                  &body=Hey guy, here's an idea..."><button><i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i>Chatting things</button></a>
+              </div><!-- Content -->
+            </div>
 
             <div class="cta wow slideInUp" data-wow-delay="1s">
               <div class="social">
