--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     </script>
   </head>
   <body>
+    <div class="divider-container wow fadeIn" data-wow-delay="2s">
+      
+    </div>
     <!-- <img src="images/updatedstates.gif" width=" 700px" id="animate-area" lass="hero-image wow fadeInLeft" data-wow-delay="1s"> -->
 
     <div class="hero-image wow fadeInLeft" id="animate-area"> 
@@ -60,6 +63,7 @@
             </div> -->
             <div class="left-bar">
               <div class="content">
+                  <div class="pulse-animation"></div>
                   <h5>My name is Donny <span style="opacity: .5; letter-spacing: -.1rem";>////////////////</span></h5>
                   <h1>I'm 
                     <span
